--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: linear-gradient(to bottom, #ccccb2, #757519);
     font-family: 'Coda', cursive;
 }
 
@@ -29,8 +29,10 @@ body {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    font-family: 'Srisakdi', cursive;
+    font-size: 4rem;
+    color: #1897c9;
+    margin:40px;
 }
 
 /*
@@ -66,9 +68,16 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(0);
+    transform: rotateY(180deg);
+    transition: 0.3s;
+    transform-style: preserve-3d;
     background: #02b3e4;
     cursor: default;
+}
+
+.wrong {
+    background: red !important;
+    font-size: 33px !important;
 }
 
 .deck .card.show {
@@ -101,9 +110,65 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+    font-size: 1.2rem;
+    color: #c51688;
 }
 
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+.moves, .restart {
+    font-size: 1.2rem;
+    color: #c51688;
+}
+
+.timer {
+    display: inline-block;
+    font-size: 2rem;
+    font-family: 'Orbitron', sans-serif;
+    margin-bottom: 30px;
+    color: #e23d4d;
+}
+
+.modal {
+    display: none;
+    position: fixed;  /*Stay in place */
+    left: 100;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.content {
+    background-color: #c3dbb3;
+    font-size: 30px;
+    font-family: 'Srisakdi', cursive;
+    color: #157d78;
+    margin: 20% auto;
+    text-align: center;
+    padding-top: 15%;
+    border: 1px solid #888;
+    width: 80%;
+    height:60%;
+}
+
+.congos {
+    font-size: 45px;
+    margin: 15px;
+}
+
+.score {
+    margin: 20px;
+}
+
+.repeat {
+    padding: 20px;
+    background: #9af2bd;
+    font-size: 30px;
+    margin: 10px;
 }
